refactor: Изменение readme, pom.xml, schema.sql и некоторых классов